# IASD_Kaggle_HW2

./: EDA.ipynb  EDA_2.ipynb  README.md  data_processing.py  data_processing_2.py  data_processing_3.py  model.py  model_10.py  model_11.py  model_7.py  pyproject.toml  training_6.py  training_7.py  training_utils_1.py
data/raw/: column_description.csv  test.csv
logs/tensorboard/1.0_20250524_165030/: events.out.tfevents.1748098230.brice-21k5cto1ww.455751.0
logs/tensorboard/1.0_20250524_165047/: events.out.tfevents.1748098247.brice-21k5cto1ww.455864.0
logs/tensorboard/1.0_20250524_165138/: events.out.tfevents.1748098298.brice-21k5cto1ww.456021.0
logs/tensorboard/1.0_20250524_165151/: events.out.tfevents.1748098311.brice-21k5cto1ww.456118.0
logs/tensorboard/1.0_20250524_170253/: events.out.tfevents.1748098973.brice-21k5cto1ww.457585.0
logs/tensorboard/1.0_20250524_171836/: events.out.tfevents.1748099916.brice-21k5cto1ww.458827.0
logs/tensorboard/1.0_20250524_175503/: events.out.tfevents.1748102103.brice-21k5cto1ww.464950.0
results/feature_selector/: selected_features.txt
results/models/: final_xgb_model_1.0.joblib  final_xgb_model_2.0.joblib
results/processed/: X_scaled_test.csv  y_scaled.csv
results/scalers/: feature_scaler.pkl  target_scaler.pkl
results/studies/: study_xgb_1.0.pkl  study_xgb_2.0.pkl  study_xgb_3.0.pkl  study_xgb_cat_6.0.pkl
results/submissions/: submission_ens_10.10.csv  submission_ens_11.4.csv  submission_xgb_1.0.csv  submission_xgb_2.0.csv
submissions/: submission_6_1.csv  submission_6_3.csv
(+3 files in other folders)
